# Swedish-ERP

./: .env.example  .gitignore  AGENTS.md  AGENTS_STRIKT_REBUILD_EXEKVERING.md  CI_POLICY.md  CODEOWNERS  README.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json
.github/: dependabot.yml
.github/workflows/: fas0-ci.yml
apps/api/: .env.example  README.md  package.json
apps/desktop-web/: .env.example  README.md  package.json
apps/field-mobile/: .env.example  README.md  package.json
apps/worker/: .env.example  README.md  package.json
docs/: MASTER_BUILD_PLAN.md
docs/adr/: ADR-0001-runtime-versions.md  ADR-0002-surface-strategy.md  (+28 more)
scripts/: README.md  build.mjs  db-migrate.mjs  db-seed.mjs  dev-down.ps1  dev-up.ps1  dev.mjs  doctor.mjs  healthcheck.mjs  lint.mjs  new-migration.ps1  provision-aws-kms-secret-runtime.mjs  repair-migration-history.mjs  run-pilot-parallel-runs.ps1  run-tests.mjs  runtime-honesty-scan.mjs  runtime-log.mjs  security-scan.mjs  typecheck.mjs  verify-checkpoint-v1.ps1  verify-checkpoint-v2.ps1  verify-checkpoint-v3.ps1  verify-checkpoint-v4.ps1  verify-checkpoint-v5.ps1  verify-checkpoint-v7.ps1  verify-db.ps1  verify-final-non-ui-readiness.ps1  verify-phase0.ps1  verify-phase1.ps1  verify-phase10-build.ps1  verify-phase10-field.ps1  verify-phase10-projects.ps1  verify-phase11-bureau.ps1  verify-phase11-close.ps1  verify-phase11-reporting.ps1  verify-phase12-annual-reporting.ps1  verify-phase12-tax-submissions.ps1  verify-phase13-ai-automation.ps1  verify-phase13-partner-integrations.ps1  verify-phase13-public-api.ps1  (+31 more)
(+949 files in other folders)
