[project]
name = "swedish-erp-python"
version = "0.0.0.dev0"
description = "Phase 0 Python support configuration for Swedish ERP."
requires-python = "==3.14.3"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/swedish_erp_python"]

[tool.hatch.build.targets.sdist]
include = ["src/swedish_erp_python", "pyproject.toml", "tests/python"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
